@@ -1090,10 +1090,16 @@ Comma-separated list(s) of perl extension scripts (default: C<default>) to
 use in this terminal instance; option B<-pe>.
 
 Extension names can be prefixed with a C<-> sign to prohibit using
-it. This can be useful to selectively disable some extensions loaded
+them. This can be useful to selectively disable some extensions loaded
 by default, or specified via the C<perl-ext-common> resource. For
 example, C<default,-selection> will use all the default extension except
 C<selection>.
+
+Extension names can also be followed by an argument in angle brackets
+(e.g.  C<< searchable-scrollback<M-s> >>, which binds the hotkey for
+searchable scorllback to Alt/Meta-s). Mentioning the same extension
+multiple times with different arguments will pass multiple arguments to
+the extension.
 
 Each extension is looked up in the library directories, loaded if
 necessary, and bound to the current terminal instance.
