@@ -11,10 +11,10 @@ WISH: support tex fonts
 
 	- added sections for DISTRIBUTION MAINTAINERS and about
           SETUID/SETGID to the FAQ.
+        - selection, searchable-scrollback, selection-popup and
+          option-popup extensions enabled by default.
         - increased xft drawing speed for problematic fonts. The effect
           will likely be small as 99% of the xft slowness is server-related.
-	- selection, selection-popup and option-popup extensions
-          enabled by default.
         - perl: much increased functionality, better overlays, popup support
           and much much more.
         - perl: urxvt::line now can set via ->t and ->r.
@@ -26,6 +26,7 @@ WISH: support tex fonts
         - free the resource database: this plugs a massive memory leak. As a
           side effect, it also gets rid of XGetDefault calls.
         - free one of the cursors, fixes a small memory leak.
+        - built-in (as opposed to terminfos) visual bell was broken/too fast.
 
 6.3  Wed Jan  4 22:37:10 CET 2006
         - SECURITY FIX: on systems using openpty, permissions were
